// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowIcon Test should render left arrow 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="w-5 h-5"
    fill="currentColor"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`ArrowIcon Test should render right arrow 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="w-5 h-5"
    fill="currentColor"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;
